--- a/swe-nfl-project/public/index.html
+++ b/swe-nfl-project/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fbulldog.swosu.edu%2Fbrand-standards%2Fathletic-spirit-marks.php&psig=AOvVaw0j9XnhYyYEEKcqQVFphNHI&ust=1676995367772000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCIDPpNu8pP0CFQAAAAAdAAAAABAE" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%https://www.google.com/url?sa=i&url=https%3A%2F%2Fbulldog.swosu.edu%2Fbrand-standards%2Fathletic-spirit-marks.php&psig=AOvVaw0j9XnhYyYEEKcqQVFphNHI&ust=1676995367772000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCIDPpNu8pP0CFQAAAAAdAAAAABAE" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
