--- a/swe-nfl-project/public/index.html
+++ b/swe-nfl-project/public/index.html
@@ -42,5 +42,32 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div class="navigation">
+      <div class="menuToggle"></div>
+      <ul>
+        <li class="list">
+          <a href="index.html">
+            <span class="icon"><ion-icon name="home-outline"></ion-icon></ion-icon></span>
+            <span class="text">Home</span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="nflstats.html">
+            <span class="icon"><ion-icon name="american-football-outline"></ion-icon></span>
+            <span class="text">NFL</span>
+          </a>
+        </li>
+      </ul>
+    <script>
+      const menuToggle = document.querySelector('.menuToggle');
+      const navigation = document.querySelector('.navigation');
+      menuToggle.onclick = function(){
+        navigation.classList.toggle('open')
+      }
+    </script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    </div>
+    </div>
   </body>
 </html>
