--- a/swe-nfl-project/public/index.html
+++ b/swe-nfl-project/public/index.html
@@ -57,6 +57,12 @@
             <span class="text">NFL</span>
           </a>
         </li>
+        <li class="list">
+          <a href="team_stats_visual.html">
+            <span class="icon"><ion-icon name="logo-tableau"></ion-icon></span>
+            <span class="text">Viz</span>
+          </a>
+        </li>
       </ul>
     <script>
       const menuToggle = document.querySelector('.menuToggle');
